--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation "com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1"
 
+
+    implementation "com.airbnb.android:lottie:3.4.0"
+
 }
