--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,37 +9,35 @@
 
 
     <application
-        android:hardwareAccelerated="true"
         android:name="org.otunjargych.tamtam.activities.App"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_app_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.TamTam">
         <activity
-            android:screenOrientation="fullSensor"
             android:name="org.otunjargych.tamtam.activities.SplashActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:screenOrientation="fullSensor"
-            android:name="org.otunjargych.tamtam.activities.MainActivity">
-        </activity>
+            android:windowSoftInputMode="adjustPan"
+            android:name="org.otunjargych.tamtam.activities.MainActivity"
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
+            android:name="org.otunjargych.tamtam.activities.RegistrationActivity"
             android:exported="true"
-            android:name="org.otunjargych.tamtam.activities.RegistrationActivity">
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
+            android:name=".extensions.imagepicker.ui.Gallery"
             android:exported="true"
-            android:name=".extensions.imagepicker.ui.Gallery">
-        </activity>
+            android:screenOrientation="portrait" />
 
     </application>
 
