--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,25 +20,20 @@
         <activity
             android:name="org.otunjargych.tamtam.activities.SplashActivity"
             android:exported="true"
-            android:theme="@style/Theme.Splash"
-            android:screenOrientation="portrait">
+            android:screenOrientation="fullSensor"
+            android:theme="@style/Theme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:windowSoftInputMode="adjustPan"
             android:name="org.otunjargych.tamtam.activities.MainActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="org.otunjargych.tamtam.activities.RegistrationActivity"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name="org.otunjargych.tamtam.activities.RegistrationActivity" />
         <activity
             android:name=".extensions.imagepicker.ui.Gallery"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
 
     </application>
 
