--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
-    implementation "com.google.firebase:firebase-firestore-ktx:22.1.1"
+    implementation "com.google.firebase:firebase-firestore-ktx:24.0.0"
 
     //Glide and Coil
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -73,13 +73,11 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation "com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1"
 
-
     // Coroutine Lifecycle Scopes
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
     implementation "androidx.activity:activity-ktx:1.4.0"
     implementation "androidx.fragment:fragment-ktx:1.4.0"
-
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
@@ -92,9 +90,12 @@ dependencies {
     implementation("androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03")
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
+    //PagingLibrary
     implementation "androidx.paging:paging-runtime-ktx:3.1.0"
     implementation "androidx.paging:paging-rxjava2-ktx:3.1.0"
-
     implementation 'com.firebaseui:firebase-ui-database:8.0.0'
+
+    //Lottie
+    implementation "com.airbnb.android:lottie:3.4.0"
 
 }
