--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,6 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-android-extensions'
     id 'com.google.gms.google-services'
-    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -84,11 +83,6 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.4.3"
 
-    //hilt
-    implementation("com.google.dagger:hilt-android:2.38.1")
-    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
-    implementation("androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03")
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     //PagingLibrary
     implementation "androidx.paging:paging-runtime-ktx:3.1.0"
@@ -98,4 +92,16 @@ dependencies {
     //Lottie
     implementation "com.airbnb.android:lottie:3.4.0"
 
+    //EventBus
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    kapt 'org.greenrobot:eventbus-annotation-processor:3.0.1'
+    implementation 'com.squareup:otto:1.3.8'
+
 }
+
+kapt {
+    arguments {
+        arg('eventBusIndex', 'org.otunjargych.tamtam.MyEventBusIndex')
+    }
+}
+
