--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "org.otunjargych.tamtam"
         minSdk 26
         targetSdk 31
-        versionCode 3
-        versionName "3.1"
+        versionCode 4
+        versionName "4.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -99,6 +99,11 @@ dependencies {
     kapt "androidx.room:room-compiler:2.4.1"
     implementation "androidx.room:room-ktx:2.4.1"
 
+    //AppUpdate
+    implementation 'com.google.android.play:core:1.10.3'
+
+    //AdMob Google
+    implementation 'com.google.android.gms:play-services-ads:20.5.0'
 }
 
 
