--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:hardwareAccelerated="true"
             android:name="org.otunjargych.tamtam.activities.MainActivity"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="adjustPan" />
@@ -45,6 +46,9 @@
             android:configChanges="orientation|screenSize"
             android:exported="true" />
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/app_id"/>
     </application>
 
 </manifest>
