--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.google.maps.android:android-maps-utils:0.4'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     //ui
     implementation 'com.chabbal:slidingdotsplash:1.0.2'
